Added ResNet-2 training diagram

--- a/docs/licencjat.tex
+++ b/docs/licencjat.tex
@@ -443,8 +443,8 @@ Currently deep neural networks get better results than state-of-the-art algorith
 	            \end{table}
 	            \begin{figure}[h]
 				\centering
-				\caption{TODO: to jest fejkowy obrazek}
-				\includegraphics[width=\textwidth]{images/AlexNet-flowers-102}
+				\caption{Training ResNet-2 on CIFAR10}
+				\includegraphics[width=\textwidth]{images/ResNet-2-training}
 			\end{figure}
 		        \paragraph{Discussion} 
 
