--- a/docs/licencjat.tex
+++ b/docs/licencjat.tex
@@ -265,7 +265,7 @@ Currently deep neural networks get better results than state-of-the-art algorith
 		\caption{Scheme of single ResNet block}
 		\label{fig:144}
 				\centering
-				\includegraphics[width=\textwidth]{AlexNet}
+				\includegraphics[width=\textwidth]{images/block}
 		\end{figure}
 		We use blocks to construct Resnet(n) in a following way:
 		\begin{itemize}
@@ -283,7 +283,7 @@ Currently deep neural networks get better results than state-of-the-art algorith
 		\caption{Scheme of ResNet architecture}
 		\label{fig:666}
 				\centering
-				\includegraphics[width=\textwidth]{AlexNet}
+				\includegraphics[width=\textwidth]{images/resnet}
 		\end{figure}
 		\subsection{Parameters}
 			\begin{itemize}
