--- a/docs/licencjat.tex
+++ b/docs/licencjat.tex
@@ -23,7 +23,7 @@
 \opiekun{Dr. Konrad Durnoga}
 \kierunek{COMPUTER SCIENCE}
 \klasyfikacja{  Computing methodologies - Machine learning - Machine learning approaches - Neural Networks}
-\keywords{binarized neural network, XNORNET}
+\keywords{binarized neural network, XNOR-Net}
 \dziedzina{ 11.3 Informatics, Computer Science}
 \tytulang{Inferencja w sieciach neuronowych przy użyciu arytmetyki niskiej precyzji}
 \begin{document}
@@ -71,7 +71,7 @@ Currently deep neural networks get better results than state-of-the-art algorith
 	
 	This project was created during "Team programming project" classes in 2016/17 and was proposed by Intel. Main goal of this project is the analysis of the effect that neural network binarization has on the inference quality of inference depending on:
 	\begin{itemize}
-	    \item the network topology (LENET, ResNet, AlexNet),
+	    \item the network topology (LeNet, ResNet, AlexNet),
 	    \item the level of binarization (weights or weights and inputs).
 	\end{itemize}
 	
@@ -121,7 +121,7 @@ Currently deep neural networks get better results than state-of-the-art algorith
 
 \part{Architecture overview}
 \chapter{Implemented binarization algorithms}
-	In order to get binarized network from standard network we implemented two binarization algorithms proposed by XORNET paper. The main difference is that first one binarized only filters while second change both filters and activation to binary. 
+	In order to get binarized network from standard network we implemented two binarization algorithms proposed by XNOR-Net paper. The main difference is that first one binarized only filters while second change both filters and activation to binary. 
 	\section{Binarized filters}
         In this approach, we use special binarized filter for forward propagation.
         \\\\
@@ -159,11 +159,11 @@ Currently deep neural networks get better results than state-of-the-art algorith
         A general formula for space savings is as follows (assuming we use 32-bit floating-point numbers):
         $$s_m =  \frac{space_{bin}}{space_{float}} = \frac{\#_\alpha * 32bit + \#_{weights}*1bit}{\#_{weights} * 32bit} \text{.}$$
         
-        In case of different $\alpha$ for each layer $\#_\alpha = \#_{layers}$. So in a LENET network, where $\#_{layers} = 4$ and $\#_{weights} = 1642272$ space saving coefficient $s_m = 1/(31.9975)$. If $\alpha$ is computed for each kernel then $\#_\alpha = \#_{kernels}$. To compute the space savings for the LENET model, we can observe that the number of weights is the same as above but $\#_\alpha = 32+32+1024+10 = 1098$, so $s_m = 1/(31.3297)$.
+        In case of different $\alpha$ for each layer $\#_\alpha = \#_{layers}$. So in a LeNet network, where $\#_{layers} = 4$ and $\#_{weights} = 1642272$ space saving coefficient $s_m = 1/(31.9975)$. If $\alpha$ is computed for each kernel then $\#_\alpha = \#_{kernels}$. To compute the space savings for the LeNet model, we can observe that the number of weights is the same as above but $\#_\alpha = 32+32+1024+10 = 1098$, so $s_m = 1/(31.3297)$.
             
-	    If we binarize the weights, we can use the fact that to compute convolution we do not need to perform multiplication. This results in roughly two times shorter computation time \cite{xnornet}.
+	    If weights are binarized, every multiplication can be replaced with addition. This results in roughly two times shorter computation time \cite{xnornet}.
 	    
-	    \section{Binarized inputs and weights (XNORNET)}
+	    \section{Binarized inputs and weights (XNOR-Net)}
 	    Using this kind of binarization gives the same savings as for binarized weights, as we have to compute all $\beta$ coefficients during inference (they are not saved). Still, the space gain is around 32x which is an excellent result.
 	    
 	    In this case, it is possible to compute convolution using XNOR bitcount operations only. This results in around 58 times better computation time \cite{xnornet}.
@@ -172,7 +172,7 @@ Currently deep neural networks get better results than state-of-the-art algorith
 		\section{LeNet on MNIST}
  		LeNet is a small 7-level network invented by Yann LeCun et al \cite{lenet}. It is one of the best known neural network due to its simplicity. However, it does not mean that LeNet is not a powerful tool. According to Wikipedia, couple of banks apply LeNet to recognise written digits on cheques.  The provided implementation was highly influenced by a Tensorflow's tutorial. \\
  		\subsection{MNIST}
- 			MNIST is a set of handwritten digit drawn in black\&white. Examples were resized and cropped so that each digit is centered and the size is equal to $18\times18$ pixels. The dataset is split into 2 parts: training (60,000 pictures) and test (10,000 pictures).
+ 			MNIST is a set of handwritten digits drawn in black\&white. Examples were resized and cropped so that each digit is centered and the size is equal to $18\times18$ pixels. The dataset is split into 2 parts: training (60,000 pictures) and test (10,000 pictures).
  			\begin{figure}[h]
 				\caption{Examples of MNIST pictures}
 				\centering
@@ -206,7 +206,7 @@ Currently deep neural networks get better results than state-of-the-art algorith
  	\section{AlexNet on ImageNet}
  	AlexNet caused a breakthrough in deep neural networks after a great success during ImageNet Large-Scale Visual Recognition Challenge in 2012. It achieved top 5 test error rate of $15.4\%$ leaving other opponents far behind. In comparison, the next team achieved an error rate of $26.2\%$. 
  	\section{Finetuned AlexNet on oxford-102}
- 	It has been 5 years since the astonishing victory of AlexNet, although people are still experimenting with it achieving great results. jimgoo \cite{jimgoo} proposed an ingenious approach of learning which gave him a top 1 error rate of $7\%$ on oxford-102 set. In this experiment we try to replicate the results and find out whether it is possible to achieve a similar accuracy using binarized networks. 
+ 	It has been 5 years since the astonishing victory of AlexNet, although people are still experimenting with it and achieve great results. jimgoo \cite{jimgoo} proposed an ingenious approach of learning which gave him a top 1 error rate of $7\%$ on oxford-102 set. In this experiment we try to replicate the results and find out whether it is possible to achieve a similar accuracy using binarized networks. 
  		\subsection{Oxford-flowers-102}
  		The Oxford flowers dataset contains the most common flowers found in United Kingdom. Each image represents a single flower. Within each class, the examples do not differ much but there exists a number of similar classes which makes the task harder. The images are saved in large resolution and their sizes are not normalized. The dataset is split into 3 parts: test (6,149 pictures), train (1,020 images) and validation (1,020 images). In this experiment, the machine is trained on the test set and tested against the train set as the authors of CaffeNet fine-tuned on the Oxford 102 category flower dataset did.
  			\begin{figure}[h]
@@ -314,7 +314,7 @@ Currently deep neural networks get better results than state-of-the-art algorith
 
 	\section{Used machine learning framework}
 
-		We decided to work with one of the open source frameworks, that can be used for neural networks. The structure of BNN proposed in Binary Connect \cite{binaryConnect} and XNORNET \cite{xnornet} is very similar to the standard convolutional network, so there is no need to implement BNN from scratch. 
+		We decided to work with one of the open source frameworks, that can be used for neural networks. The structure of BNN proposed in Binary Connect \cite{binaryConnect} and XNOR-Net \cite{xnornet} is very similar to the standard convolutional network, so there is no need to implement BNN from scratch. 
 	
 		All frameworks that we analyse (TensorFlow, Torch, Caffe) have similar functionality, for example they have already implemented pooling and affine layers so we can easily reuse them. 
 
@@ -326,9 +326,9 @@ Currently deep neural networks get better results than state-of-the-art algorith
 \chapter{Implementation details}
 
 \section{Implementation in Python}
-Tensorflow Python library offers numerous built-in functions for machine learning and data exploring. Every operation is supplied with modifiable gradient. It significantly lessens the amount of effort and code written by  scientists. There are more advantages of using built-in tensorflow's functions. First of all, almost every Tensorflow’s operation provides a GPU implementation. It is a crucial feature. The computing power of GPU devices is much greater than CPU's one. Also, GPUs have an ability to perform more computations in parallel. Models trained on GPU are computed several times quicker due to parallelization. Secondly, our binarized operations are less likely to have implementation bugs. Assuming that Tensorflow’s functions compute correctly, the only thing to do is compose them and modify the gradients so that it will fit XNORNET authors' equations. It is a great advantage, especially on early stage, because future C++ operation can be based on it.
+Tensorflow Python library offers numerous built-in functions for machine learning and data exploring. Every operation is supplied with modifiable gradient. It significantly lessens the amount of effort and code written by  scientists. There are more advantages of using built-in tensorflow's functions. First of all, almost every Tensorflow’s operation provides a GPU implementation. It is a crucial feature. The computing power of GPU devices is much greater than CPU's one. Also, GPUs have an ability to perform more computations in parallel. Models trained on GPU are computed several times quicker due to parallelization. Secondly, our binarized operations are less likely to have implementation bugs. Assuming that Tensorflow’s functions compute correctly, the only thing to do is compose them and modify the gradients so that it will fit XNOR-Net authors' equations \cite{xnornet}. It is a great advantage, especially on early stage, because future C++ operation can be based on it.
 		 
-Tensorflow library provides a wrapper for user-defined functions. We used it at the beginning, but it quickly turned out that writing a custom function leads into trouble. The approach got changed. Instead of writing own function, we started to compose built-in ones. The most tricky part comes when parameters need to be binarized. On one hand, in feed-forward, the convolution must be computed with binary parameters. On the other hand, in backward propagation, the gradient must be computed with respect to the full-precision parameters. First part of this problem was solved by applying signum function. Unfortunately, this application affects the gradient computation. Changing the gradient function of signum to identity fixed the second part of the problem (this fix was firstly applied in DoReFa-Net). The implementation supports both weights and weights \& inputs binarization. The second method does not compute redundant factors, i.e., the second technique described in XNORNET paper \cite{xnornet} is used.
+Tensorflow library provides a wrapper for user-defined functions. We used it at the beginning, but it quickly turned out that writing a custom function leads into trouble. The approach got changed. Instead of writing own function, we started to compose built-in ones. The most tricky part comes when parameters need to be binarized. On one hand, in feed-forward, the convolution must be computed with binary parameters. On the other hand, in backward propagation, the gradient must be computed with respect to the full-precision parameters. First part of this problem was solved by applying signum function. Unfortunately, this application affects the gradient computation. Changing the gradient function of signum to identity fixed the second part of the problem (this fix was firstly applied in DoReFa-Net). The implementation supports both weights and weights \& inputs binarization. The second method does not compute redundant factors, i.e., the second technique described in XNOR-Net paper \cite{xnornet} is used.
 
 		\section{Implementation in C++}
 		In Tensorflow framework it is possible to add a so-called core user-defined operation to the existing ones. To support binary convolution two operations were added, namely BinaryConv2D, which binarizes only filter weights, and BinaryConvInput2D binarizing both inputs and filters' weights. Those were implemented in source files \texttt{conv\_bin.cc} and \texttt{conv\_bin\_inputs.cc}, respectively. The source files were added to \texttt{tensorflow/core/user\_ops} directory.
@@ -482,7 +482,7 @@ Tensorflow library provides a wrapper for user-defined functions. We used it at 
 
 			\subsubsection{Binary Resnet with binary weights and inputs}
 			        \paragraph{Discussion} 
-				We did not manage to train any size of ResNet with binary weights and inputs, though the authors of XNORNET claim that their network achieves near state-of-the-art results. They did not provide any code, so we were struggling with it on our own. The size of ResNet makes it very delicate -- a small change in the learning rate has a great impact on the accuracy. In this experiment, the best, yet still unsatisfactory, accuracy was achieved by ResNet-2 with the score of 20\%. 
+				We did not manage to train any size of ResNet with binary weights and inputs, though the authors of XNOR-Net claim that their network achieves near state-of-the-art results. They did not provide any code, so we were struggling with it on our own. The size of ResNet makes it very delicate -- a small change in the learning rate has a great impact on the accuracy. In this experiment, the best, yet still unsatisfactory, accuracy was achieved by ResNet-2 with the score of 20\%. 
 				During experiments we strugled with following issues:
 			        \begin{itemize}
 			                \item An implementation which uses \texttt{tf.nn.conv2d} twice in each binarization process is much slower. 
